@@ -9,7 +9,12 @@
 
 ## To Run
 
-[Add a brief description of which .java file to run, and what vm arguments are needed]
+To run this application, go to the Run > Edit Configurations...
+From here create a new application like "CourseReviewsApplication" and run on your local machine.
+Click the "Modify Options" dropdown and select "Add VM Arguments" and an additional section will appear.
+Enter in your path to the application "--module-path [file path]" and then tack on "--add-modules javafx.controls,javafx.fxml".
+The next field is where the Main class is, which you'd fill with "edu.virginia.sde.reviews.CourseReviewsApplication".
+From here, click OK and you're ready to run the application. You can either click the green play button at the top right of IntelliJ or go back to Run and click "Run 'CourseReviewsApplication'".
 
 ## Contributions
 
@@ -19,6 +24,7 @@ List the primary contributions of each author. It is recommended to update this 
 
 * Login Screen
 * Functional Navigation Headers + logout/exits
+* FXML CSS
 
 ### Krish Sahoo
 
